--- a/index.html
+++ b/index.html
@@ -5,27 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="StyleSheet.css" />
+    <link
+      rel="stylesheet"
+      media="(min-width:800px)"
+      href="StyleSheetLarge.css"
+    />
     <title>toBinary</title>
   </head>
   <body>
     <script src="index.js"></script>
-    <div>
-      <h1>Decimal</h1>
+    <div class="in">
+      <h1>Decimal:</h1>
       <input type="text" id="Decimal" />
     </div>
-    <div>
-      <h3>Binary:</h3>
-      <h3 id="binaryOut"></h3>
+    <div class="outText">
+      <h3 id="binaryOut">Binary:</h3>
     </div>
-    <div>
-      <h3>Octal:</h3>
-      <h3 id="octalOut"></h3>
+    <div class="outText">
+      <h3 id="octalOut">Octal:</h3>
     </div>
-    <div>
-      <h3>Hexadecimal:</h3>
-      <h3 id="hexOut"></h3>
+    <div class="outText">
+      <h3 id="hexOut">Hexadecimal:</h3>
     </div>
-    <div>
+    <div class="buttons">
       <a href="https://andihat.github.io/toBinary/indexB.html">
         <button>From binary</button>
       </a>
